--- a/ui.glade
+++ b/ui.glade
@@ -29,6 +29,9 @@
             <property name="orientation">vertical</property>
             <property name="spacing">6</property>
             <child>
+              <placeholder/>
+            </child>
+            <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -180,7 +183,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -191,7 +194,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child>
@@ -601,11 +604,8 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
-            </child>
-            <child>
-              <placeholder/>
             </child>
             <child>
               <placeholder/>
@@ -630,14 +630,58 @@
         <property name="subtitle">Control center</property>
         <property name="show_close_button">True</property>
         <child>
-          <placeholder/>
+          <object class="GtkComboBoxText" id="comboChooseDevice">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="active_id">0</property>
+            <signal name="changed" handler="on_comboChooseDevice_changed" swapped="no"/>
+          </object>
         </child>
       </object>
     </child>
   </object>
-  <object class="GtkAdjustment" id="rgbAdjustment">
-    <property name="upper">255</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+  <object class="GtkAboutDialog" id="aboutdialog">
+    <property name="can_focus">False</property>
+    <property name="modal">True</property>
+    <property name="type_hint">dialog</property>
+    <property name="transient_for">window</property>
+    <property name="program_name">razerCommander</property>
+    <property name="version">Alpha</property>
+    <property name="comments" translatable="yes">This project is not affiliated with Razer, Inc. (http://www.razerzone.com/)</property>
+    <property name="website">https://github.com/gabmus/razercommander</property>
+    <property name="authors">Gabriele Musco aka GabMus (frontend)
+Tim Theede aka pez2001 (razer-chroma-driver)</property>
+    <property name="logo_icon_name">image-missing</property>
+    <property name="license_type">gpl-3-0</property>
+    <child internal-child="vbox">
+      <object class="GtkBox">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
   </object>
 </interface>
