--- a/ui.glade
+++ b/ui.glade
@@ -611,8 +611,8 @@
             </child>
             <child>
               <object class="GtkBox" id="keyboardBox">
-                <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
                 <property name="halign">center</property>
                 <property name="valign">center</property>
                 <property name="orientation">vertical</property>
