--- a/ui.glade
+++ b/ui.glade
@@ -1103,6 +1103,7 @@ Terry Cain aka terrycain (razer_driver, original driver fork)</property>
             <property name="height_request">250</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="hscrollbar_policy">never</property>
             <property name="shadow_type">in</property>
             <child>
               <object class="GtkViewport">
