apply button color is now managed by default gtk css class

--- a/ui.glade
+++ b/ui.glade
@@ -1140,6 +1140,9 @@
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <signal name="clicked" handler="on_universalApplyButton_clicked" swapped="no"/>
+            <style>
+              <class name="suggested-action"/>
+            </style>
           </object>
         </child>
         <child type="title">
