--- a/ui.glade
+++ b/ui.glade
@@ -865,7 +865,7 @@
                                   <object class="GtkLabel">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">Pipette: </property>
+                                    <property name="label" translatable="yes">Color picker: </property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
